splited UpdateIncident for creation and recieve in the yaml, now an UpdateIncident has a date
