# service-status-specs/src/main/resources/api-spec.yaml
@@ -1,13 +1,7 @@
 ﻿swagger: '2.0'
 info:
-  description: >-
-    This is a sample server Petstore server.  You can find out more about
-    Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net,
-    #swagger](http://swagger.io/irc/).      For this sample, you can use the api
-    key `special-key` to test the authorization     filters.
   version: 1.0.0
   title: Lozzikit Status Service
-  termsOfService: 'http://swagger.io/terms/'
   contact:
     email: michael.spierer@heig-vd.ch
     email: benoit.gianinetti@heig-vd.ch
@@ -16,12 +10,10 @@ info:
   license:
     name: MIT
     url: 'https://mit-license.org/'
-basePath: /v2
+basePath: /v1
 tags:
   - name: Service
     description: Manage your services
-  - name: Maintenance
-    description: Define when a service will be unavailable
   - name: Incident
     description: When something goes bad with a service
 schemes:
@@ -221,7 +213,7 @@ paths:
           description: Incident update to be added to the incident
           required: true
           schema:
-            $ref: '#/definitions/IncidentUpdate'
+            $ref: '#/definitions/NewIncidentUpdate'
         - name: idService
           in: path
           description: ID of the service
@@ -339,7 +331,7 @@ definitions:
     required:
       - title
       - updates
-  IncidentUpdate:
+  NewIncidentUpdate:
     type: object
     properties:
       type:
@@ -348,6 +340,15 @@ definitions:
         type: string
     required:
       - type
+  IncidentUpdate:
+    type: object
+    properties:
+    allOf:
+      - $ref:  '#/definitions/NewIncidentUpdate'
+      - properties:
+          createdAt:
+            type: string
+            format: date-time
   IncidentType:
     type: string
     enum:
@@ -371,7 +372,7 @@ definitions:
   Status:
     type: object
     properties:
-      updateAt:
+      updatedAt:
         type: string
         format: date-time
       httpStatus:
@@ -386,4 +387,3 @@ definitions:
     required:
       - httpStatus
       - state
-
